examples/cert-manager/02-hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
