examples/cert-manager/04-hello-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ticketing.dev
    secretName: hello-tls
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
